; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_extent_io.c_release_extent_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_extent_io.c_release_extent_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.extent_buffer = type { i32, i32, i32, i32, %struct.btrfs_fs_info*, i32 }
%struct.btrfs_fs_info = type { i32, i32 }

@EXTENT_BUFFER_IN_TREE = common dso_local global i32 0, align 4
@PAGE_SHIFT = common dso_local global i32 0, align 4
@btrfs_release_extent_buffer_rcu = common dso_local global i32 0, align 4
@EXTENT_BUFFER_UNMAPPED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.extent_buffer*)* @release_extent_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @release_extent_buffer(%struct.extent_buffer* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.extent_buffer*, align 8
  %4 = alloca %struct.btrfs_fs_info*, align 8
  store %struct.extent_buffer* %0, %struct.extent_buffer** %3, align 8
  %5 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %6 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %5, i32 0, i32 1
  %7 = call i32 @lockdep_assert_held(i32* %6)
  %8 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %9 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %8, i32 0, i32 5
  %10 = call i64 @atomic_read(i32* %9)
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @WARN_ON(i32 %12)
  %14 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %15 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %14, i32 0, i32 5
  %16 = call i64 @atomic_dec_and_test(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %56

18:                                               ; preds = %1
  %19 = load i32, i32* @EXTENT_BUFFER_IN_TREE, align 4
  %20 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %21 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %20, i32 0, i32 3
  %22 = call i64 @test_and_clear_bit(i32 %19, i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %45

24:                                               ; preds = %18
  %25 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %26 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %25, i32 0, i32 4
  %27 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %26, align 8
  store %struct.btrfs_fs_info* %27, %struct.btrfs_fs_info** %4, align 8
  %28 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %29 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %28, i32 0, i32 1
  %30 = call i32 @spin_unlock(i32* %29)
  %31 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %4, align 8
  %32 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %31, i32 0, i32 0
  %33 = call i32 @spin_lock(i32* %32)
  %34 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %4, align 8
  %35 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %34, i32 0, i32 1
  %36 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %37 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load i32, i32* @PAGE_SHIFT, align 4
  %40 = ashr i32 %38, %39
  %41 = call i32 @radix_tree_delete(i32* %35, i32 %40)
  %42 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %4, align 8
  %43 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %42, i32 0, i32 0
  %44 = call i32 @spin_unlock(i32* %43)
  br label %49

45:                                               ; preds = %18
  %46 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %47 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %46, i32 0, i32 1
  %48 = call i32 @spin_unlock(i32* %47)
  br label %49

49:                                               ; preds = %45, %24
  %50 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %51 = call i32 @btrfs_release_extent_buffer_pages(%struct.extent_buffer* %50)
  %52 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %53 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %52, i32 0, i32 2
  %54 = load i32, i32* @btrfs_release_extent_buffer_rcu, align 4
  %55 = call i32 @call_rcu(i32* %53, i32 %54)
  store i32 1, i32* %2, align 4
  br label %60

56:                                               ; preds = %1
  %57 = load %struct.extent_buffer*, %struct.extent_buffer** %3, align 8
  %58 = getelementptr inbounds %struct.extent_buffer, %struct.extent_buffer* %57, i32 0, i32 1
  %59 = call i32 @spin_unlock(i32* %58)
  store i32 0, i32* %2, align 4
  br label %60

60:                                               ; preds = %56, %49
  %61 = load i32, i32* %2, align 4
  ret i32 %61
}

declare dso_local i32 @lockdep_assert_held(i32*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i64 @test_and_clear_bit(i32, i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @radix_tree_delete(i32*, i32) #1

declare dso_local i32 @btrfs_release_extent_buffer_pages(%struct.extent_buffer*) #1

declare dso_local i32 @call_rcu(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
